1.删除部分输出，避免GooglePlay警示信息。 2.更改版本号为3.3.1

--- a/juhe_V3.3_base_world/CMAdSdkDemo/src/main/res/values/strings.xml
+++ b/juhe_V3.3_base_world/CMAdSdkDemo/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">天马SDK</string>
+    <string name="app_name">PEGASI</string>
 
     <string name="adsdk_debug_enabled">true</string>
     <string name="adsdk_debug_toast_enabled">false</string>
